--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+:root,
+:root.light {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  /* color-scheme: light dark; */
-  /* color: rgba(255, 255, 255, 0.87); */
-  /* background-color: #242424; */
+  color:rgba(17, 17, 17, 0.87);
+  color-scheme: light;
+  --bg-color: #f5f5f5;
 
-  /* --color-app-light: #2196F3; */
-  --color-app-light: #2088c2;
+  /* Styles header */
+  --bg-cabecera-principal: radial-gradient(at center center, rgb(150 195 255), rgb(206 228 253), rgb(230 240 255));
+  --color-logo-infojobs: #2088c2;
+  --border-usuario-github: #2088c2;
+  --bg-busqueda-ofertas: #2088c2b3;
+  --bg-boton-enviar-formulario: #fa4c18;
+  --bg-boton-enviar-formulario-hover: #d24216;
+
+  /* Styles change theme */
+  --bg-fondo-cambiar-tema: #fff;
+  --bg-borde-cambiar-tema: linear-gradient(135deg, #67efe8 45%, #0d63da 55%);
+  --bg-circulo-cambiar-tema: linear-gradient(195deg, #60ede6 10%, #0d63da 90%);
+
+  /* Styles offer */
+  --bg-item-offer: #fff;
+  --bg-item-offer-hover: rgb(219 234 254);
+  --color-detalles-oferta-modal: rgb(3 7 18);
+  --color-titulo-oferta: #292e31;
+  --enlace-empresa-oferta: rgb(30 64 175);
+  --enlace-empresa-oferta-hover: rgb(13, 40, 130);
+  --color-detalles-oferta: rgb(107 114 128);
+  
+  /* Styles modal offer */
+  --bg-modal-offer: #fff;
+  --bg-modal-user: #ececec;
+  --bg-header-modal-offer: #dbfbff;
+  --subtitle-modal: black;
+  --bg-skills-offer: rgb(191 219 254);
+  
+  /* Styles modal user */
+  --bg-header-modal-user: rgb(75, 85, 99);
+  --color-text-modal-user: rgb(75 85 99);
+  --boton-enviar-usuario-github: rgb(30 64 175);
+  --boton-enviar-usuario-github-hover: #153290;
+  
+  /* Styles Pagination */
+  --bg-botones-paginacion: #2088c2;
+  --bg-botones-paginacion-hover: rgb(59 130 246);
+  
+  /* Styles Aviso */
+  --color-text-aviso: white;
+  --bg-new-offer: #018e45;
+  --bg-bold-offer: rgb(17 61 185);
+  
+  /* Styles Filter */
+  --hover-botones: rgb(229 231 235);
+  --color-texto-categorias: rgb(31 41 55);
+
+  /* Styles Generals */
+  --bg-barra-scroll: #c3c3c3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,32 +70,79 @@
   -webkit-text-size-adjust: 100%;
 }
 
+:root.dark {
+  color: rgba(255, 255, 255, 0.87);
+  color-scheme: dark;
+  --bg-color: #030a20;
+
+  /* Styles header */
+  --bg-cabecera-principal: #04154c;
+  --color-logo-infojobs: #2da7eb;
+  --border-usuario-github: #2da7eb;
+  --bg-busqueda-ofertas: #00010380;
+  --bg-boton-enviar-formulario: #d03507;
+  --bg-boton-enviar-formulario-hover: #ba2d02;
+
+  /* Styles change theme */
+  --bg-fondo-cambiar-tema: #04154c;
+  --bg-borde-cambiar-tema: linear-gradient(135deg, #67efe8 45%, #0d63da 55%);
+  --bg-circulo-cambiar-tema: linear-gradient(40deg, #9b17d1 7%, #ef5b14 47%, #ee671e 46%);
+
+  /* Styles offer */
+  --bg-item-offer: #011349;
+    --bg-item-offer-hover: #031b64;
+  --color-detalles-oferta-modal: rgb(217, 217, 217);
+  --color-titulo-oferta: #f5f5f5;
+  --enlace-empresa-oferta: rgb(170, 243, 244);
+  --enlace-empresa-oferta-hover: rgb(21 252 255);
+  --color-detalles-oferta: rgb(217, 217, 217);
+
+  /* Styles modal offer */
+  --bg-modal-offer: #030A20;
+  --bg-modal-user: #020a25;
+  --bg-header-modal-offer: #011349;
+  --subtitle-modal: #f5f5f5;
+  --bg-skills-offer: rgb(5 36 140);
+
+  /* Styles modal user */
+  --bg-header-modal-user: #001352;
+  --color-text-modal-user: rgb(213, 213, 213);
+  --boton-enviar-usuario-github: rgb(15 44 139);
+  --boton-enviar-usuario-github-hover: rgb(9 32 108);
+
+  /* Styles Pagination */
+  --bg-botones-paginacion: #041a5b;
+  --bg-botones-paginacion-hover: #07153f;
+
+  /* Styles Aviso */
+  --color-text-aviso: black;
+  --bg-new-offer: #41e690;
+  --bg-bold-offer: rgb(47 231 243);
+
+  /* Styles Filter */
+  --hover-botones: #001965;
+  --color-texto-categorias: rgb(233, 234, 235);
+
+  /* Styles Generals */
+  --bg-barra-scroll: #ddd;
+}
+
 body {
-  background-color: #f5f5f5;
-  /* background-color: #0a0b2e; */
   scroll-behavior: smooth;
+  background: var(--bg-color);
 }
 
 body::-webkit-scrollbar-thumb, .contenidoConScroll::-webkit-scrollbar-thumb {
-  background-color: #2088c2;
+  background-color: var(--color-logo-infojobs);
   border-radius: 20px;
 }
 
 body::-webkit-scrollbar, .contenidoConScroll::-webkit-scrollbar {
-  background-color: #c3c3c3;
+  background-color: var(--bg-barra-scroll);
   width: 10px;
   margin: 4px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.contenidoConScroll {
+  scroll-behavior: smooth;
 }
