--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,13 @@
   
   /* Styles modal offer */
   --bg-modal-offer: #fff;
-  --bg-modal-user: #ececec;
   --bg-header-modal-offer: #dbfbff;
   --subtitle-modal: black;
   --bg-skills-offer: rgb(191 219 254);
   
   /* Styles modal user */
-  --bg-header-modal-user: rgb(75, 85, 99);
+  --bg-header-modal-user: rgb(172 209 255);
+  --bg-modal-user: #e9e9e9;
   --color-text-modal-user: rgb(75 85 99);
   --boton-enviar-usuario-github: rgb(30 64 175);
   --boton-enviar-usuario-github-hover: #153290;
@@ -99,13 +99,13 @@
 
   /* Styles modal offer */
   --bg-modal-offer: #030A20;
-  --bg-modal-user: #020a25;
   --bg-header-modal-offer: #011349;
   --subtitle-modal: #f5f5f5;
   --bg-skills-offer: rgb(5 36 140);
 
   /* Styles modal user */
   --bg-header-modal-user: #001352;
+  --bg-modal-user: #020a25;
   --color-text-modal-user: rgb(213, 213, 213);
   --boton-enviar-usuario-github: rgb(15 44 139);
   --boton-enviar-usuario-github-hover: rgb(9 32 108);
